# Strifve-Caster

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/engine/: mod.rs  render_data.rs  texture.rs
src/engine/actors/: entity.rs
src/engine/advanced_types/: batch.rs  camera.rs  camera_controller.rs  mod.rs  texture_vecs.rs
src/engine/primitives/: matrix.rs  mod.rs  quarternion.rs  quaternion.rs  transformation.rs  vector.rs  vertex.rs
src/engine/traits/: mod.rs  update_entity.rs  update_textures.rs
src/shaders/: shader.wgsl
