[package]
name = "effect-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
cfg-if = "1"
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive" ]}
anyhow = "1.0.71"
num-traits = "0.2.15"
once_cell = "1.18.0"
rand = "0.8.5"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]
